--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ install:
   - pip install https://github.com/xpdAcq/SHED/zipball/master#egg=shed
   - pip install https://github.com/xpdAcq/xpdView/zipball/master#egg=xpdview
   - pip install https://github.com/xpdAcq/xpdSim/zipball/master#egg=xpdsim
+  - pip install https://github.com/xpdAcq/xpdAcq/zipball/master#egg=xpdacq
   - pip install .
   - pip install codecov pytest-env
 
