--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ install:
   - pip install https://github.com/xpdAcq/xpdView/zipball/master#egg=xpdview
   - pip install https://github.com/xpdAcq/xpdSim/zipball/master#egg=xpdsim
   - pip install https://github.com/xpdAcq/xpdAcq/zipball/master#egg=xpdacq
+  - pip install https://github.com/xpdAcq/xpdAn/zipball/master#egg=xpdan
   - pip install .
   - pip install codecov pytest-env
 
